[platform] improving reading/setting custom VM options API; migrating usages
...; switching the implementation to NIO (IDEA-240526 preparatory work)

GitOrigin-RevId: b04e9f56a730b4b881dd5892bf6bb3083465e498